kubernetes/overlays/homelab/recommendation/ingress-patch.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: recommendation
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-cloudflare"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - recommendation.home-lab.webdemoapp.com
      secretName: recommendation-tls
  rules:
    - host: recommendation.home-lab.webdemoapp.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: recommendation
                port:
                  number: 8080
